--- a/views/cart-detail.hbs
+++ b/views/cart-detail.hbs
@@ -23,38 +23,42 @@
                 <div class="row justify-content-md-start justify-content-center">
                     <div>
                         <div style="font-size: 25px; font-weight:bold; color:#3498db"> {{cart_detail.name}} </div>
-                        <div style="font-size: 15px;"> Tác giả <a href="#">{{cart_detail.author}}</a> </div>
+                        <div style="font-size: 15px;"> Tác giả
+                            {{#each cart_detail.author}}
+                            <a href="#">{{this.name}}</a>
+                            {{/each}}
+                        </div>
 
                     </div>
                 </div>
                 <hr>
-                <form>
+                <form action="" method="post" id="formCartDetail">
                     <div class="form-group row">
                         <label for="rent_time" class="col-sm-2 col-form-label"
                             style="padding-left: 0; padding-right:0;">Thời gian nhận:</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="rent_time" value={{cart_detail.rent_time}}>
+                            <input type="text" class="form-control" name="rent_time" id="rent_time" value={{cart_detail.rent_time}}>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="rent_date" class="col-sm-2 col-form-label"
                             style="padding-left: 0; padding-right:0;">Ngày nhận:</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="rent_date" value={{cart_detail.rent_date}}>
+                            <input type="text" class="form-control" name="rent_date" id="rent_date" value={{cart_detail.rent_date}}>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="return_date" class="col-sm-2 col-form-label"
                             style="padding-left: 0; padding-right:0;">Ngày trả:</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="return_date" value={{cart_detail.return_date}}>
+                            <input type="text" class="form-control" name="return_date" id="return_date" value={{cart_detail.return_date}}>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="location" class="col-sm-2 col-form-label"
                             style="padding-left: 0; padding-right:0;">Địa điểm:</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="location" value="{{cart_detail.location}}">
+                            <input type="text" class="form-control" name="location" id="location" value="{{cart_detail.location}}">
                         </div>
                     </div>
                 </form>
@@ -63,10 +67,8 @@
 
         </div>
         <div class="text-center " style="padding: 0 50px;">
-            <a href="/carts">
-                <button class="customized-btn blue-bg-white-text" style="border:none; background-color: #3498db;">Xác
-                    nhận</button>
-            </a>
+            <button type="submit" form="formCartDetail" class="customized-btn blue-bg-white-text" style="border:none; background-color: #3498db;">Xác
+                nhận</button>
             <a href="/carts">
                 <button class="customized-btn white-bg-black-text" style="padding: 5px 13px;">
                     <div style="width:8ch">Hủy</div>
