--- a/views/news.hbs
+++ b/views/news.hbs
@@ -18,7 +18,7 @@
                 <div class="d-flex justify-content-center">
                     {{#each sectionSuKien.articles}}
                     {{#if @first}}
-                    <a href="/news-detail">
+                    <a href="/news-detail/{{this._id}}" + >
                         <div class="card" style="width: 220px; border:none;">
 
                             <div class="card-body" style="padding:5px">
@@ -29,7 +29,7 @@
                                     {{this.date}}
                                 </p>
                             </div>
-                            <img class="card-img-top" src={{this.thumbnail}} alt="Card image cap"
+                            <img class="card-img-top" src={{this.image_url}} alt="Card image cap"
                                 style="padding-bottom: 20px;">
 
                         </div>
@@ -49,15 +49,7 @@
                         {{#each sectionSuKien.articles}}
                         {{#if @first}}
                         {{else}}
-                        <a href="/news-detail">
-                            <div style="color: black;">{{this.title}}</div>
-                            <div style="color: grey;">{{this.date}}</div>
-                        </a>
-                        <a href="/news-detail">
-                            <div style="color: black;">{{this.title}}</div>
-                            <div style="color: grey;">{{this.date}}</div>
-                        </a>
-                        <a href="/news-detail">
+                        <a href="/news-detail/{{this._id}}">
                             <div style="color: black;">{{this.title}}</div>
                             <div style="color: grey;">{{this.date}}</div>
                         </a>
@@ -65,7 +57,7 @@
                         {{/each}}
                         <a href="/news">
                             <div class="text-right" style="color: #3498DB; font-weight:bold;">
-                                {{sectionSuKien.more_news}}</div>
+                                → xem tất cả sự kiện</div>
                         </a>
 
                     </div>
@@ -85,7 +77,7 @@
                 <div class="d-flex justify-content-center">
                     {{#each sectionThongBao.articles}}
                     {{#if @first}}
-                    <a href="/news-detail">
+                    <a href="/news-detail/{{this._id}}">
                         <div class="card" style="width: 220px; border:none;">
 
                             <div class="card-body" style="padding:5px">
@@ -96,7 +88,7 @@
                                     {{this.date}}
                                 </p>
                             </div>
-                            <img class="card-img-top" src={{this.thumbnail}} alt="Card image cap"
+                            <img class="card-img-top" src={{this.image_url}} alt="Card image cap"
                                 style="padding-bottom: 20px;">
 
                         </div>
@@ -116,15 +108,7 @@
                         {{#each sectionThongBao.articles}}
                         {{#if @first}}
                         {{else}}
-                        <a href="/news-detail">
-                            <div style="color: black;">{{this.title}}</div>
-                            <div style="color: grey;">{{this.date}}</div>
-                        </a>
-                        <a href="/news-detail">
-                            <div style="color: black;">{{this.title}}</div>
-                            <div style="color: grey;">{{this.date}}</div>
-                        </a>
-                        <a href="/news-detail">
+                        <a href="/news-detail/{{this._id}}">
                             <div style="color: black;">{{this.title}}</div>
                             <div style="color: grey;">{{this.date}}</div>
                         </a>
