--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,14 +1,17 @@
 <link rel="stylesheet" href="/stylesheets/slick-here.css">
 <div class="container-fluid" style="padding:0; width:95%">
     <div class="content-section picture-search d-flex justify-content-center bg-white no-padding align-items-center">
-        <div id="searchbar-in-picture" class="input-group col-8">
-            <input type="text" class="form-control" placeholder="Tìm kiếm sách, tin tức, ..." aria-label="Username"
-                aria-describedby="basic-addon1">
-            <div class="input-group-append">
-                <a class="input-group-text" href="/search"><img src="/images/search-icon.svg" alt=""
-                        style="width: 20px;"></a>
-            </div>
-        </div>
+        <form id="searchbar-in-picture" class="input-group col-8" method="POST" action="/search">
+            
+                <input type="text" name="searchBar" class="form-control" placeholder="Tìm kiếm sách, tin tức, ..."
+                    aria-label="Username" aria-describedby="basic-addon1">
+                <div class="input-group-append">
+                    <button type="submit" class="input-group-text" ><img src="/images/search-icon.svg"
+                            alt="" style="width: 20px;"></button>
+                </div>
+            
+
+        </form>
     </div>
 
     <div class="content-section bg-white no-padding">
@@ -17,15 +20,15 @@
             {{#each sectionSachHot.list_categories}}
             {{#if @first}}
             <li class="nav-item col-sm-2  " style="padding: 0; margin:0">
-                <a class="nav-link navitema active" id="pills-{{this._id}}-tab" data-toggle="pill" href="#pills-{{this._id}}"
-                    role="tab" aria-controls="pills-{{this._id}}" aria-selected="true">
+                <a class="nav-link navitema active" id="pills-{{this._id}}-tab" data-toggle="pill"
+                    href="#pills-{{this._id}}" role="tab" aria-controls="pills-{{this._id}}" aria-selected="true">
                     {{this.name}}
                 </a>
             </li>
             {{else}}
             <li class="nav-item col-sm-2 " style="padding: 0; margin:0">
-                <a class="nav-link navitema" id="pills-{{this._id}}-tab" data-toggle="pill" href="#pills-{{this._id}}" role="tab"
-                    aria-controls="pills-{{this._id}}" aria-selected="false">
+                <a class="nav-link navitema" id="pills-{{this._id}}-tab" data-toggle="pill" href="#pills-{{this._id}}"
+                    role="tab" aria-controls="pills-{{this._id}}" aria-selected="false">
                     {{this.name}}
                 </a>
             </li>
@@ -85,7 +88,7 @@
             {{/each}}
 
         </div>
-        
+
     </div>
 
     {{!News section}}
