--- a/views/borrower-profile.hbs
+++ b/views/borrower-profile.hbs
@@ -39,7 +39,7 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th scope="col">Mã mượn</th>
+                    {{!-- <th scope="col">Mã mượn</th> --}}
                     <th scope="col">Mã sách</th>
                     <th scope="col">Tên sách</th>
                     <th scope="col">Tác giả</th>
@@ -140,7 +140,7 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th scope="col">Mã mượn</th>
+                    {{!-- <th scope="col">Mã mượn</th> --}}
                     <th scope="col">Mã sách</th>
                     <th scope="col">Tên sách</th>
                     <th scope="col">Tác giả</th>
