--- a/views/carts.hbs
+++ b/views/carts.hbs
@@ -26,9 +26,9 @@
             </div>
             <div class="col-md">
                 <div>
-                    <div class=" text-md-right text-center" style="font-size: 20px;">Ngày nhận: {{this.rent_date}}
+                    <div class=" text-md-right text-center" style="font-size: 20px;">Ngày nhận: {{this.book_date}}
                     </div>
-                    <div class=" text-md-right text-center" style="font-size: 20px;">Ngày trả: {{this.return_date}}
+                    <div class=" text-md-right text-center" style="font-size: 20px;">Ngày trả: {{this.due_date}}
                     </div>
                     <a href="/cart-detail/{{this.id}}">
                         <div class=" text-md-right text-center" style="font-size: 20px; color:grey;">
