--- a/views/lib-index.hbs
+++ b/views/lib-index.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/stylesheets/index-lib.css">
+<link rel="stylesheet" href="/stylesheets/lib-index.css">
 
 <div id="statistic" class="container-fluid block">
     <div id="stat-header" class="container-fluid block-header">
@@ -176,6 +176,6 @@
         counts: [420,234,151,3],
     };
 </script>
-<script src="/function/index-lib.js"></script>
+<script src="/function/lib-index.js"></script>
 
 <script src="/function/nav-lib.js" current_page="Trang chủ"></script>
