--- a/views/return-book-list.hbs
+++ b/views/return-book-list.hbs
@@ -14,8 +14,8 @@
                         <div>{{#each this.author}}
                             {{this.name}},
                             {{/each}}</div>
-                        <div style="font-size: 20px;">Ngày nhận: {{this.rent_date}} </div>
-                        <div style="font-size: 20px;">Ngày trả: {{this.return_date}} </div>
+                        <div style="font-size: 20px;">Ngày nhận: {{this.book_date}} </div>
+                        <div style="font-size: 20px;">Ngày trả: {{this.due_date}} </div>
                     </div>
 
                 </div>
