--- a/views/cart-detail.hbs
+++ b/views/cart-detail.hbs
@@ -41,17 +41,17 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="rent_date" class="col-sm-2 col-form-label"
+                        <label for="book_date" class="col-sm-2 col-form-label"
                             style="padding-left: 0; padding-right:0;">Ngày nhận:</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name="rent_date" id="rent_date" value={{cart_detail.rent_date}}>
+                            <input type="text" class="form-control" name="book_date" id="book_date" value={{cart_detail.book_date}}>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="return_date" class="col-sm-2 col-form-label"
+                        <label for="due_date" class="col-sm-2 col-form-label"
                             style="padding-left: 0; padding-right:0;">Ngày trả:</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name="return_date" id="return_date" value={{cart_detail.return_date}}>
+                            <input type="text" class="form-control" name="due_date" id="due_date" value={{cart_detail.due_date}}>
                         </div>
                     </div>
                     <div class="form-group row">
