--- a/views/lib-law.hbs
+++ b/views/lib-law.hbs
@@ -29,7 +29,7 @@
                         <label for="return_date" class="col-sm-5 col-form-label text-center"
                             style="padding-left: 0; padding-right:0;">Số ngày tối đa được mượn:</label>
                         <div class="col-sm-6">
-                            <input type="text" class="form-control" id="rent_date" value={{curr_law.max_day}}>
+                            <input type="text" class="form-control" id="book_date" value={{curr_law.max_day}}>
                         </div>
                     </div>
                     <div class="form-group row">
