borrow, return, cancel, lost function

--- a/views/borrower-profile.hbs
+++ b/views/borrower-profile.hbs
@@ -44,7 +44,7 @@
                     <th scope="col">Tên sách</th>
                     <th scope="col">Tác giả</th>
                     <th scope="col">Ghi chú</th>
-                    <th scope="col">Thời gian nhận</th>
+                    <th scope="col">Thời gian đặt nhận</th>
                     <th scope="col">Hạn trả</th>
                     <th scope="col">Hành động</th>
                 </tr>
@@ -144,7 +144,7 @@
                     <th scope="col">Mã sách</th>
                     <th scope="col">Tên sách</th>
                     <th scope="col">Tác giả</th>
-                    <th scope="col">Mất sách?</th>
+                    <th scope="col">Hành động</th>
                     <th scope="col">Hạn trả</th>
                 </tr>
             </thead>
