show manager theo user

--- a/views/buy-book-manager.hbs
+++ b/views/buy-book-manager.hbs
@@ -46,7 +46,7 @@
                     <th style="white-space: nowrap;" class="l-height-3"> {{this.producer}}</th>
                     <th style="white-space: nowrap;" class="l-height-3"> {{this.discipline}}</th>
                     <th style="white-space: nowrap;" class="l-height-3"> {{this.date_registed}}</th>
-                    <th style="white-space: nowrap;" ><button class="confirm-button">Xác nhận</button>
+                    <th style="white-space: nowrap;" ><button class="confirm-button">Sửa</button>
                         <button class="customized-btn">Hủy bỏ</button>
                     </th>
                 </tr>
